早期课程网页结构不一致,修改获取数据的逻辑

--- a/src/try.ipynb
+++ b/src/try.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,16 +38,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['CDwindow-F53915FAB54B6146928DA499734F8B55']"
+       "['CDwindow-F88451EC43B4B868C547B33F199F02B0']"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,17 +96,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
-    "els[0].click()\n",
+    "els[1].click()\n",
     "# time.sleep(3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +115,7 @@
        "'大数据管理技术'"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,14 +155,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<selenium.webdriver.remote.webelement.WebElement (session=\"49480647d064fb87783c502e9d2ed1be\", element=\"aec320a2-9cd7-42da-92ef-bd7feab14b8b\")>\n"
+      "<selenium.webdriver.remote.webelement.WebElement (session=\"b93a4d6c09c6cf7e8aee7d63010e9aa6\", element=\"ff72769a-885e-4679-91e0-6a8325f4bcb6\")>\n"
      ]
     },
     {
@@ -171,7 +171,7 @@
        "'frame_content-hd'"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -185,16 +185,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
-    "web.switch_to.frame('frame_content-zy')"
+    "web.switch_to.default_content()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,16 +213,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 80,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "相对论部分模块总结作业\n",
+      "开始时间：\n",
+      "2020-12-14 20:29\n",
+      "截止时间：\n",
+      "2020-12-22 22:55\n",
+      "作业状态：\n",
+      "已完成\n",
+      "95分\n",
+      "查看\n"
+     ]
+    }
+   ],
    "source": [
-    "task:WebElement = tasks[0]"
+    "task:WebElement = tasks[0]\n",
+    "print(task.text)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 数据\n",
+    "items = task.find_elements_by_xpath(\"div/span\")\n",
+    "# items = task.find_elements_by_tag_name(\"span\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -230,39 +258,23 @@
      "output_type": "stream",
      "text": [
       "开始时间：\n",
-      "2021-12-20 14:02\n",
+      "2020-12-14 20:29\n",
+      "---------------\n",
       "截止时间：\n",
-      "2021-12-29 18:00\n",
+      "2020-12-22 22:55\n",
+      "---------------\n",
       "作业状态：\n",
-      "已完成\n"
+      "已完成\n",
+      "---------------\n",
+      "95分\n",
+      "---------------\n"
      ]
     }
    ],
    "source": [
-    "# 数据\n",
-    "print(task.find_elements_by_xpath(\"div[1]/span\")[0].text)\n",
-    "print(task.find_elements_by_xpath(\"div[1]/span\")[1].text)\n",
-    "print(task.find_elements_by_xpath(\"div[1]/span\")[2].text)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'5分'"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "task.find_element_by_xpath(\"div[2]/span\").text"
+    "for i in items:\n",
+    "    print(rf'{i.text}')\n",
+    "    print(\"---------------\")"
    ]
   },
   {
@@ -362,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -372,16 +384,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['CDwindow-F53915FAB54B6146928DA499734F8B55']"
+       "['CDwindow-F88451EC43B4B868C547B33F199F02B0']"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -392,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
